# harmonic

./: .gitignore  LICENSE.txt  README.md  build.sh  gen_resources.sh  meson.build
.github/workflows/: c-cpp.yml
game_payload/: copy_core.sh  meson.build
game_payload/include/: ace.h  config.h.in  core.h  crc32c.h  main.h  ntdll.h  pe.h  tlzma.h  utils.h
game_payload/lzma_sdk/: README.txt
game_payload/src/: ace.c  main.c  msg.c  pe.c  tlzma.c  utils.c
injector/: meson.build
injector/include/: envs.h  gpa.asm  inject.h
injector/src/: dll.c  dumper_exe.c  game_p.asm  inject.c  launcher_p.asm  loader_exe.c
